--- a/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/assignment.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/assignment.ipynb
@@ -3260,6 +3260,45 @@
    "source": [
     "#96.wap to count the repeats of a specific character in string"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gh45$Dsfaad#Jl38Jj Dsf Gfg687(&(*Ghyuf09)) #Sd#Ljj Ads G\n"
+     ]
+    }
+   ],
+   "source": [
+    "#105.wap to convert given string to tittle case\n",
+    "# n='#@aizen so#@#suke ichigo'\n",
+    "# n='Hello haIi World WelV3coMe to py$hon cLAs'\n",
+    "# n='$dsfAAD#jl38'\n",
+    "n='gh45$dsfAAD#jl38jj dsf gfg687(&(*ghyuf09)) #sd#ljj Ads g'\n",
+    "s=''\n",
+    "i=0\n",
+    "while i<len(n):\n",
+    "    if not ('a'<=n[i]<='z' or 'A'<=n[i]<='Z' ):\n",
+    "        s+=n[i]\n",
+    "    elif 'a'<=n[i]<='z' and i==0:\n",
+    "            s+=chr(ord(n[i])-32)\n",
+    "    else:\n",
+    "        if  not ('a'<=n[i-1]<='z' or 'A'<=n[i-1]<='Z') and 'a'<=n[i]<='z':\n",
+    "            s+=chr(ord(n[i])-32)\n",
+    "        elif 'A'<=n[i-1]<='Z' and 'A'<=n[i]<='Z' :\n",
+    "            s+=chr(ord(n[i])+32)\n",
+    "        elif 'a'<=n[i-1]<='z' and 'A'<=n[i]<='Z' :\n",
+    "            s+=chr(ord(n[i])+32)\n",
+    "        else:\n",
+    "            s+=n[i]\n",
+    "    i+=1\n",
+    "print(s)    "
+   ]
   }
  ],
  "metadata": {
