--- a/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/assignment.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/assignment.ipynb
@@ -3263,6 +3263,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello Haii World Welv3C*Ome To Py$Hon Clas'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#wap to convert given string to tittle case\n",
+    "#each word starting character should be uppercase\n",
+    "#after ascii num char and special char the next character should in uppercase\n",
+    "#tha last character should be lowercase\n",
+    "#each word starting char should be uppercase and remaining should be lowercase\n",
+    "'hello haIi World WelV3c*oMe to py$hon cLAs'.title()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
