--- a/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/assignment.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/assignment.ipynb
@@ -3227,38 +3227,354 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "r 1\n"
+     ]
+    }
+   ],
    "source": [
-    "#93.wap to count the occurence of a specific character in string"
+    "#93.wap to count the occurence of a specific character in string\n",
+    "a='helloworld'\n",
+    "b=list(a)\n",
+    "d={}\n",
+    "i=0\n",
+    "while i<len(a):\n",
+    "    if a[i] not in d:\n",
+    "        d[a[i]]=1\n",
+    "    else:\n",
+    "        d[a[i]]+=1\n",
+    "    i+=1\n",
+    "# print(d)\n",
+    "print(b[7],d[a[7]])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "l 3\n"
+     ]
+    }
+   ],
    "source": [
-    "#94.wap to count the max occurence of a character in string"
+    "#94.wap to count the max occurence of a character in string\n",
+    "a='helloworld'\n",
+    "# b=list(a)\n",
+    "d={}\n",
+    "i=0\n",
+    "while i<len(a):\n",
+    "    if a[i] not in d:\n",
+    "        d[a[i]]=1\n",
+    "    else:\n",
+    "        d[a[i]]+=1\n",
+    "    i+=1\n",
+    "i=0\n",
+    "ld=d[a[0]]\n",
+    "while i<len(d):\n",
+    "    if ld<d[a[i]]:\n",
+    "        ld=d[a[i]]\n",
+    "        ch=a[i]\n",
+    "    i+=1\n",
+    "print(ch,ld)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h 1\n"
+     ]
+    }
+   ],
    "source": [
-    "#95.wap to count the min occurence of a character in string"
+    "#95.wap to count the min occurence of a character in string\n",
+    "a='helloworld'\n",
+    "# b=list(a)\n",
+    "d={}\n",
+    "i=0\n",
+    "while i<len(a):\n",
+    "    if a[i] not in d:\n",
+    "        d[a[i]]=1\n",
+    "    else:\n",
+    "        d[a[i]]+=1\n",
+    "    i+=1\n",
+    "i=0\n",
+    "ld=d[a[0]]\n",
+    "while i<len(d):\n",
+    "    if ld<d[a[i]]:\n",
+    "        ld=d[a[i]]\n",
+    "        ch=a[i]\n",
+    "    i+=1\n",
+    "# print(ch,ld)\n",
+    "i=0\n",
+    "while i<len(d):\n",
+    "    if ld>d[a[i]]:\n",
+    "        ld=d[a[i]]\n",
+    "        ch=a[i]\n",
+    "    i+=1\n",
+    "print(ch,ld)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'h': 1, 'e': 1, 'l': 3, 'o': 2, 'w': 1, 'r': 1, 'd': 1}\n",
+      "o 2\n"
+     ]
+    }
+   ],
    "source": [
-    "#96.wap to count the repeats of a specific character in string"
+    "#96.wap to count the repeats of a specific character in string\n",
+    "a='helloworld'\n",
+    "# b=list(a)\n",
+    "d={}\n",
+    "i=0\n",
+    "while i<len(a):\n",
+    "    if a[i] not in d:\n",
+    "        d[a[i]]=1\n",
+    "    else:\n",
+    "        d[a[i]]+=1\n",
+    "    i+=1\n",
+    "print(d)\n",
+    "b=list(d)\n",
+    "print(b[3],d[b[3]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "L\n"
+     ]
+    }
+   ],
+   "source": [
+    "#97.wap to count the max repeated character in given string\n",
+    "a='heLLoworLd'\n",
+    "# b=list(a)\n",
+    "d={}\n",
+    "i=0\n",
+    "while i<len(a):\n",
+    "    if a[i] not in d:\n",
+    "        d[a[i]]=1\n",
+    "    else:\n",
+    "        d[a[i]]+=1\n",
+    "    i+=1\n",
+    "i=0\n",
+    "ld=d[a[0]]\n",
+    "while i<len(d):\n",
+    "    if ld<d[a[i]]:\n",
+    "        ld=d[a[i]]\n",
+    "        ch=a[i]\n",
+    "    i+=1\n",
+    "print(ch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h\n"
+     ]
+    }
+   ],
+   "source": [
+    "#98.wap to count the min repeated character in given string\n",
+    "a='helloworld'\n",
+    "# b=list(a)\n",
+    "d={}\n",
+    "i=0\n",
+    "while i<len(a):\n",
+    "    if a[i] not in d:\n",
+    "        d[a[i]]=1\n",
+    "    else:\n",
+    "        d[a[i]]+=1\n",
+    "    i+=1\n",
+    "i=0\n",
+    "ld=d[a[0]]\n",
+    "while i<len(d):\n",
+    "    if ld<d[a[i]]:\n",
+    "        ld=d[a[i]]\n",
+    "        ch=a[i]\n",
+    "    i+=1\n",
+    "# print(ch,ld)\n",
+    "i=0\n",
+    "while i<len(d):\n",
+    "    if ld>d[a[i]]:\n",
+    "        ld=d[a[i]]\n",
+    "        ch=a[i]\n",
+    "    i+=1\n",
+    "print(ch)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "$bcd\n"
+     ]
+    }
+   ],
+   "source": [
+    "#99.wap to replace a specific character into new character\n",
+    "a='abcd'\n",
+    "b='$'+a[1:]\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ABCD\n"
+     ]
+    }
+   ],
+   "source": [
+    "#100.wap to convert lowercase to uppercase in given sting\n",
+    "a='abcd'\n",
+    "b=a.upper()\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abcd\n"
+     ]
+    }
+   ],
+   "source": [
+    "#101.wap to convert uppercase to lowercase in given sting\n",
+    "a='ABCD'\n",
+    "b=a.lower()\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c\n"
+     ]
+    }
+   ],
+   "source": [
+    "#102.wap to convert uppercase to lowercase in even position character given sting\n",
+    "a='ABCD'\n",
+    "i=0\n",
+    "while i<len(a):\n",
+    "    if i%2==0 and i!=0:\n",
+    "        print(a[i].lower())\n",
+    "    i+=1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b\n",
+      "d\n"
+     ]
+    }
+   ],
+   "source": [
+    "#103.wap to convert uppercase to lowercase in odd position character given sting\n",
+    "a='ABCD'\n",
+    "i=0\n",
+    "while i<len(a):\n",
+    "    if i%2==1 :\n",
+    "        print(a[i].lower())\n",
+    "    i+=1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DSFJ***fgd\n"
+     ]
+    }
+   ],
+   "source": [
+    "#104.wap to convert uppercase to lowercase and lower to uppercase ,\n",
+    "# if the character is special symbol replace with '*' in a input string\n",
+    "# st='&^^asdJKL$@#'\n",
+    "st= str(input('enter a string'))\n",
+    "i=0\n",
+    "new=''\n",
+    "while i<len(st):\n",
+    "    if 'a'<=st[i]<='z':\n",
+    "        new+=chr(ord(st[i])-32)\n",
+    "    elif 'A'<=st[i]<='Z':\n",
+    "        new+=chr(ord(st[i])+32)\n",
+    "    else:\n",
+    "        new+='*'\n",
+    "    i+=1\n",
+    "print(new)"
    ]
   },
   {
@@ -3278,7 +3594,7 @@
     }
    ],
    "source": [
-    "#wap to convert given string to tittle case\n",
+    "#105.wap to convert given string to title case\n",
     "#each word starting character should be uppercase\n",
     "#after ascii num char and special char the next character should in uppercase\n",
     "#tha last character should be lowercase\n",
@@ -3300,7 +3616,7 @@
     }
    ],
    "source": [
-    "#105.wap to convert given string to tittle case\n",
+    "#105.wap to convert given string to title case\n",
     "# n='#@aizen so#@#suke ichigo'\n",
     "# n='Hello haIi World WelV3coMe to py$hon cLAs'\n",
     "# n='$dsfAAD#jl38'\n",
@@ -3323,6 +3639,65 @@
     "            s+=n[i]\n",
     "    i+=1\n",
     "print(s)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "imran_khan\n"
+     ]
+    }
+   ],
+   "source": [
+    "#106.wap to convert snake case in a given string\n",
+    "st='imran khan'\n",
+    "temp=''\n",
+    "if st[0]!=' ' and st[-1]!=' ':\n",
+    "    i=0\n",
+    "    while i<len(st):\n",
+    "        if st[i]==' ':\n",
+    "            temp=st[:i]+'_'\n",
+    "        else:\n",
+    "            temp+=st[i]\n",
+    "        i+=1\n",
+    "    print(temp)\n",
+    "else:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#107. wap to Toggle character case in a string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#108.wap to replace vowels into ascii values in a given string.\n",
+    "#(both with and without temp variable)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#109.wap to replace consonents into ascii values in a given string.\n",
+    "#(both with and without temp variable)"
    ]
   }
  ],
