--- a/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/assignment.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/assignment.ipynb
@@ -3604,7 +3604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -3624,7 +3624,7 @@
     "s=''\n",
     "i=0\n",
     "while i<len(n):\n",
-    "    if not ('a'<=n[i]<='z' or 'A'<=n[i]<='Z' ):\n",
+    "    if 'A'<=n[i]<='Z' and i==0:\n",
     "        s+=n[i]\n",
     "    elif 'a'<=n[i]<='z' and i==0:\n",
     "            s+=chr(ord(n[i])-32)\n",
