--- a/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/practice.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/practice.ipynb
@@ -2476,6 +2476,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abc\n",
+      "def\n",
+      "ghkl\n",
+      "ewh\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to extract the words from given string\n",
+    "# a='     word1            word2 word3 '\n",
+    "a='  abc def  ghkl       ewh'\n",
+    "# a='hjgkgk'\n",
+    "i=0\n",
+    "s=''\n",
+    "while i<len(a):\n",
+    "    if a[i]!=' ':\n",
+    "        s+=a[i]\n",
+    "        if i==len(a)-1:\n",
+    "             print(s)\n",
+    "    elif len(s)!=0:\n",
+    "            print(s)\n",
+    "            s=''\n",
+    "    i+=1\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
