--- a/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/practice.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/practice.ipynb
@@ -2476,7 +2476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -2493,19 +2493,23 @@
    "source": [
     "#wap to extract the words from given string\n",
     "# a='     word1            word2 word3 '\n",
-    "a='  abc def  ghkl       ewh'\n",
+    "# a='  abc def  ghkl       ewh'\n",
     "# a='hjgkgk'\n",
+    "a=''\n",
     "i=0\n",
     "s=''\n",
-    "while i<len(a):\n",
-    "    if a[i]!=' ':\n",
-    "        s+=a[i]\n",
-    "        if i==len(a)-1:\n",
-    "             print(s)\n",
-    "    elif len(s)!=0:\n",
+    "if len(a)!=0:\n",
+    "    while i<len(a):\n",
+    "        if a[i]!=' ':\n",
+    "            s+=a[i]\n",
+    "            if i==len(a)-1:\n",
+    "                 print(s)\n",
+    "        elif len(s)!=0:\n",
     "            print(s)\n",
     "            s=''\n",
-    "    i+=1\n",
+    "        i+=1\n",
+    "else:\n",
+    "    print('empty string')\n",
     "\n"
    ]
   },
