--- a/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/practice.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/practice.ipynb
@@ -2476,26 +2476,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "abc\n",
-      "def\n",
-      "ghkl\n",
-      "ewh\n"
+      "empty string\n"
      ]
     }
    ],
    "source": [
     "#wap to extract the words from given string\n",
     "# a='     word1            word2 word3 '\n",
-    "# a='  abc def  ghkl       ewh'\n",
+    "a='  abc def  ghkl       ewh'\n",
     "# a='hjgkgk'\n",
-    "a=''\n",
+    "# a=''\n",
     "i=0\n",
     "s=''\n",
     "if len(a)!=0:\n",
@@ -2515,10 +2512,193 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['abc', 'def', 'ghkl', 'ewh']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to extract the words from given string store in list\n",
+    "# a='     word1            word2 word3 '\n",
+    "a='  abc def  ghkl       ewh'\n",
+    "# a='hjgkgk'\n",
+    "# a=''\n",
+    "i=0\n",
+    "s=''\n",
+    "res=[]\n",
+    "if len(a)!=0:\n",
+    "    while i<len(a):\n",
+    "        if a[i]!=' ':\n",
+    "            s+=a[i]\n",
+    "            if i==len(a)-1:\n",
+    "                 res+=[s]\n",
+    "        elif len(s)!=0:\n",
+    "            res+=[s]\n",
+    "            s=''\n",
+    "        i+=1\n",
+    "else:\n",
+    "    print('empty string')\n",
+    "print(res)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['dfjk', 'sdf', 'jlkj', 'jklj']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#sir #using turnary operator\n",
+    "st='  dfjk sdf jlkj jklj  '\n",
+    "l=[[''],[]][st[0]==' ']\n",
+    "i=0\n",
+    "while i<len(st):\n",
+    "    if st[i]!=' ':\n",
+    "        l[-1]+=st[i]\n",
+    "    else:\n",
+    "        if len(st)-1!=i and st[i+1]!=' ':\n",
+    "            l+=['']\n",
+    "    i+=1\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['fsj jlkj sdf jkjlj ', '  dfsaljkj', ' jfskjdljj;jl', '3247897', 'sdfjljlj', 'dsfjlkjkj']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to separate the lines in given doc string\n",
+    "#sir\n",
+    "st='''fsj jlkj sdf jkjlj \\n  dfsaljkj\\n jfskjdljj;jl\\n3247897\n",
+    "sdfjljlj\n",
+    "dsfjlkjkj'''\n",
+    "i=0\n",
+    "sp='\\n'\n",
+    "l=[]\n",
+    "res=''\n",
+    "while i<len(st):\n",
+    "    if st[i]!=sp:\n",
+    "        res+=st[i]\n",
+    "    else:\n",
+    "        if len(res)!=0:\n",
+    "            l+=[res]\n",
+    "            res=''\n",
+    "    i+=1\n",
+    "if len(res)!=0:\n",
+    "    l+=[res]\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['haii', 'hello', 'world', 'i', 'love', 'india', 'i', 'like', 'pythom']\n",
+      "hwilp 5\n",
+      "[['haii', 'hello'], ['world'], ['i', 'india', 'i'], ['love', 'like'], ['pythom']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a='    haii hello world i love india i like pythom '\n",
+    "i=0\n",
+    "s=''\n",
+    "res=[]\n",
+    "if len(a)!=0:\n",
+    "    while i<len(a):\n",
+    "        if a[i]!=' ':\n",
+    "            s+=a[i]\n",
+    "            if i==len(a)-1:\n",
+    "                 res+=[s]\n",
+    "        elif len(s)!=0:\n",
+    "            res+=[s]\n",
+    "            s=''\n",
+    "        i+=1\n",
+    "else:\n",
+    "    print('empty string')\n",
+    "print(res)\n",
+    "uni=''\n",
+    "i=0\n",
+    "while i<len(res):\n",
+    "    if res[i][0] not in uni:\n",
+    "        uni+=res[i][0]\n",
+    "    i+=1\n",
+    "print(uni,len(uni))\n",
+    "i=0\n",
+    "d=[]\n",
+    "while i<len(uni):\n",
+    "    d+=[[]]\n",
+    "    legt+=[[]]\n",
+    "    y=0\n",
+    "    while y<len(res):\n",
+    "        if uni[i]==res[y][0]:\n",
+    "            d[-1]+=[res[y]]\n",
+    "        y+=1\n",
+    "    i+=1\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dsfj 4\n",
+      "jlkjl 5\n",
+      "kjklj 5\n",
+      "dhjh 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "st=' dsfj  jlkjl kjklj dhjh'  \n",
+    "i=0\n",
+    "res=''\n",
+    "\n",
+    "while i<len(st):\n",
+    "    if st[i]!=' ':\n",
+    "        res+=st[i]\n",
+    "        # print(res)\n",
+    "        if i==len(st)-1:\n",
+    "            print(res,len(res))\n",
+    "    else:\n",
+    "        if len(res)!=0:\n",
+    "            print(res,len(res))\n",
+    "            res=''\n",
+    "    i+=1\n"
+   ]
   }
  ],
  "metadata": {
