--- a/py_course/flow_control_statements/2.itaration&Looping_statements/For_loop/practice.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/For_loop/practice.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -110,15 +110,14 @@
     "#wap to print odd numbers upto n using for loop\n",
     "a=10\n",
     "for i in range(0,a):\n",
-    "    if i%2==0:\n",
-    "        pass\n",
-    "    else:\n",
-    "        print(i)"
+    "    if i%2!=0:\n",
+    "        print(i)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -136,10 +135,34 @@
     "#wap to print even numbers upto n using for loop\n",
     "a=10\n",
     "for i in range(1,a):\n",
-    "    if i%2!=0:\n",
-    "        pass\n",
-    "    else:\n",
+    "    if i%2==0:\n",
     "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*\n",
+      "* *\n",
+      "* * *\n",
+      "* * * *\n",
+      "* * * * *\n",
+      "* * * * * *\n",
+      "* * * * * * *\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(7):\n",
+    "    for j in range(i):\n",
+    "        print(\"*\",end=' ' )\n",
+    "    print(\"*\")\n"
    ]
   }
  ],
