--- a/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/practice.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/practice.ipynb
@@ -2271,13 +2271,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "helloworld\n"
+     ]
+    }
+   ],
    "source": [
     "#wap extract and store the each data item from  list and store in string\n",
     "a=['h','e','l','l','o','w','o','r','l','d']\n",
-    "b="
+    "b=''\n",
+    "i=0\n",
+    "while i<len(a):\n",
+    "    b+=a[i]\n",
+    "    i+=1\n",
+    "print(b)\n"
    ]
   },
   {
@@ -2614,36 +2627,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['haii', 'hello', 'world', 'i', 'love', 'india', 'i', 'like', 'pythom']\n",
+      "['haii', 'hello', 'world', 'i', 'love', 'india', 'i', 'like', 'python']\n",
       "hwilp 5\n",
-      "[['haii', 'hello'], ['world'], ['i', 'india', 'i'], ['love', 'like'], ['pythom']]\n"
+      "[['haii', 'hello'], ['world'], ['i', 'india', 'i'], ['love', 'like'], ['python']]\n"
      ]
     }
    ],
    "source": [
-    "a='    haii hello world i love india i like pythom '\n",
+    "a='    haii hello world i love india i like python '\n",
     "i=0\n",
     "s=''\n",
     "res=[]\n",
-    "if len(a)!=0:\n",
-    "    while i<len(a):\n",
-    "        if a[i]!=' ':\n",
-    "            s+=a[i]\n",
-    "            if i==len(a)-1:\n",
-    "                 res+=[s]\n",
-    "        elif len(s)!=0:\n",
-    "            res+=[s]\n",
-    "            s=''\n",
-    "        i+=1\n",
-    "else:\n",
-    "    print('empty string')\n",
+    "while i<len(a):\n",
+    "    if a[i]!=' ':\n",
+    "        s+=a[i]\n",
+    "        # if i==len(a)-1:\n",
+    "        #      res+=[s]\n",
+    "    elif len(s)!=0:\n",
+    "        res+=[s]\n",
+    "        s=''\n",
+    "    i+=1\n",
+    "if len(s)!=0:\n",
+    "    res+=[s]\n",
     "print(res)\n",
     "uni=''\n",
     "i=0\n",
@@ -2656,7 +2668,6 @@
     "d=[]\n",
     "while i<len(uni):\n",
     "    d+=[[]]\n",
-    "    legt+=[[]]\n",
     "    y=0\n",
     "    while y<len(res):\n",
     "        if uni[i]==res[y][0]:\n",
@@ -2668,17 +2679,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dsfj 4\n",
-      "jlkjl 5\n",
-      "kjklj 5\n",
-      "dhjh 4\n"
+      "dsfj\n",
+      "jlkjl\n",
+      "kjklj\n",
+      "dhjh\n"
      ]
     }
    ],
@@ -2686,18 +2697,560 @@
     "st=' dsfj  jlkjl kjklj dhjh'  \n",
     "i=0\n",
     "res=''\n",
-    "\n",
     "while i<len(st):\n",
     "    if st[i]!=' ':\n",
     "        res+=st[i]\n",
     "        # print(res)\n",
-    "        if i==len(st)-1:\n",
-    "            print(res,len(res))\n",
+    "        # if i==len(st)-1:\n",
+    "            # print(res)\n",
     "    else:\n",
     "        if len(res)!=0:\n",
-    "            print(res,len(res))\n",
+    "            print(res)\n",
     "            res=''\n",
-    "    i+=1\n"
+    "    i+=1\n",
+    "if len(res)!=0:\n",
+    "    print(res)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['haii', 'hello', 'world', 'i', 'love', 'india', 'i', 'like', 'pythom']\n",
+      "{1, 4, 5, 6}\n",
+      "[['i', 'i'], ['haii', 'love', 'like'], ['hello', 'world', 'india'], ['pythom']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a='    haii hello world i love india i like pythom '\n",
+    "i=0\n",
+    "s=''\n",
+    "res=[]\n",
+    "ab=set()\n",
+    "if len(a)!=0:\n",
+    "    while i<len(a):\n",
+    "        if a[i]!=' ':\n",
+    "            s+=a[i]\n",
+    "            if i==len(a)-1:\n",
+    "                 res+=[s]\n",
+    "                 ab|={len(s)}\n",
+    "        elif len(s)!=0:\n",
+    "            res+=[s]\n",
+    "            ab|={len(s)}\n",
+    "            s=''\n",
+    "        i+=1\n",
+    "else:\n",
+    "    print('empty string')\n",
+    "print(res)\n",
+    "print(ab)\n",
+    "i=0\n",
+    "ad=[]\n",
+    "while i<len(ab):\n",
+    "    ad+=[[]]\n",
+    "    j=0\n",
+    "    while j<len(res):\n",
+    "        if list(ab)[i]==len(res[j]):\n",
+    "            ad[-1]+=[res[j]]\n",
+    "        j+=1\n",
+    "    i+=1\n",
+    "print(ad)\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['hello', 'fine', 'grow', 'haii', 'bye', 'good', 'bro', 'drill', 'dance']\n",
+      "{'h': ['hello', 'haii'], 'f': ['fine'], 'g': ['grow', 'good'], 'b': ['bye', 'bro'], 'd': ['drill', 'dance']}\n",
+      "[['hello', 'haii'], ['fine'], ['grow', 'good'], ['bye', 'bro'], ['drill', 'dance']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "st='''hello\\nfine\\ngrow\\nhaii\\nbye\\ngood\\nbro\\ndrill\\ndance'''\n",
+    "i=0\n",
+    "s=set()\n",
+    "l=[]\n",
+    "res=''\n",
+    "while i<len(st):\n",
+    "    if st[i]!='\\n':\n",
+    "        res+=st[i]\n",
+    "    else:\n",
+    "        if len(res)!=0:\n",
+    "            l+=[res]\n",
+    "            s|={len(res)}\n",
+    "            res=''\n",
+    "    i+=1\n",
+    "if len(res)!=0:\n",
+    "    l+=[res]\n",
+    "print(l)\n",
+    "d={}\n",
+    "start=0\n",
+    "while start<len(l):\n",
+    "    if l[start][0] not in d:\n",
+    "        d[l[start][0]]=[l[start]]\n",
+    "    else:\n",
+    "        d[l[start][0]]+=[l[start]]\n",
+    "    start+=1\n",
+    "print(d)\n",
+    "g=list(d)\n",
+    "t=[]\n",
+    "i=0\n",
+    "while i<len(g):\n",
+    "    t+=[d[g[i]]]\n",
+    "    i+=1\n",
+    "print(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['hello', 'fine', 'grow', 'haii', 'bye', 'good', 'bro', 'drill', 'dance']\n",
+      "{5: ['hello', 'drill', 'dance'], 4: ['fine', 'grow', 'haii', 'good'], 3: ['bye', 'bro']}\n",
+      "['fine', 'grow', 'haii', 'good']\n"
+     ]
+    }
+   ],
+   "source": [
+    "st='''hello\\nfine\\ngrow\\nhaii\\nbye\\ngood\\nbro\\ndrill\\ndance'''\n",
+    "i=0\n",
+    "s=set()\n",
+    "l=[]\n",
+    "res=''\n",
+    "while i<len(st):\n",
+    "    if st[i]!='\\n':\n",
+    "        res+=st[i]\n",
+    "    else:\n",
+    "        if len(res)!=0:\n",
+    "            l+=[res]\n",
+    "            s|={len(res)}\n",
+    "            res=''\n",
+    "    i+=1\n",
+    "if len(res)!=0:\n",
+    "    l+=[res]\n",
+    "print(l)\n",
+    "d={}\n",
+    "start=0\n",
+    "while start<len(l):\n",
+    "    if len(l[start]) not in d:\n",
+    "        d[len(l[start])]=[l[start]]\n",
+    "    else:\n",
+    "        d[len(l[start])]+=[l[start]]\n",
+    "    start+=1\n",
+    "print(d)\n",
+    "print(d[4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to find second large digit in given number\n",
+    "a=3345998\n",
+    "temp=a\n",
+    "l=0\n",
+    "sd=0\n",
+    "while a:\n",
+    "    ld=a%10\n",
+    "    if l<ld:\n",
+    "        l=ld\n",
+    "    a=a//10\n",
+    "print(l)\n",
+    "while temp:\n",
+    "    ld=temp%10\n",
+    "    if sd<ld<l:\n",
+    "        sd=ld\n",
+    "    temp=temp//10\n",
+    "print(sd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to find second large digit in given number using single while loop\n",
+    "a=313495\n",
+    "temp=a\n",
+    "l=0\n",
+    "sd=0\n",
+    "while a:\n",
+    "    ld=a%10\n",
+    "    if l<ld:\n",
+    "        l=ld\n",
+    "    a=a//10\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#wap to find 7th large digit in given number\n",
+    "a=123495867"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# wap to find the nth lsrgest value\n",
+    "a=12345678999980\n",
+    "b=str(a)\n",
+    "n=7\n",
+    "g=10\n",
+    "while n:\n",
+    "    i=0\n",
+    "    h=0\n",
+    "    while i<len(b):\n",
+    "        if int(b[i])>h and int(b[i])<g:\n",
+    "            h=int(b[i])\n",
+    "        i+=1\n",
+    "    g=h\n",
+    "    n-=1\n",
+    "print(h)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['.com', '.in', '.edu.in', '.org']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to extract the values after \".\" in the given string\n",
+    "a=\"safdkj@gmail.com klasugdf@outlook.in kjsadfh@org.edu.in klashdf@ymail.org\"\n",
+    "l=[]\n",
+    "s=''\n",
+    "start=0\n",
+    "while start<len(a):\n",
+    "    if a[start]==\".\" and \".\" not in s:\n",
+    "        s=\"\"\n",
+    "        s+=a[start]\n",
+    "    elif a[start]==\" \":\n",
+    "        if len(s)!=0:\n",
+    "            l+=[s]\n",
+    "            s=\"\"\n",
+    "    else:\n",
+    "        s+=a[start]\n",
+    "    start+=1\n",
+    "if len(s)!=0:\n",
+    "    l+=[s]\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abcd 1\n",
+      "efghijk 2\n",
+      "opqrst 3\n",
+      "uvwxyz 4\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "n='abcdshgyef ghijkrfd opqrstcxv  uvwxyzsdjnf '\n",
+    "i=0\n",
+    "res=''\n",
+    "count=0\n",
+    "while i<len(n):\n",
+    "    if n[i]!=' ' and ord(n[i])==ord(n[i+1])-1:\n",
+    "        res+=n[i]\n",
+    "        # count+=1\n",
+    "        if i==len(n)-1 and len(res)>=3:\n",
+    "            count+=1\n",
+    "            print(res,count)\n",
+    "    elif ord(n[i-1])+1==ord(n[i]):\n",
+    "        res+=n[i]\n",
+    "    else:\n",
+    "        if len(res)!=0 and len(res)>=3:\n",
+    "            count+=1\n",
+    "            print(res,count)\n",
+    "            res=''\n",
+    "            # count=0\n",
+    "    i+=1\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abcd\n",
+      "abcd\n",
+      "ijkl\n",
+      "efgh\n",
+      "pqrst\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# wap to count the sequence characters in given string. The minimum sequence characters count is 3\n",
+    "st=\"abcddegabcd ijkladskjbf efgh;kjdsn pqrstka\"\n",
+    "# st='abcjklxyzlmnopd'\n",
+    "# st='abcd efefgh'\n",
+    "i=0\n",
+    "seq=''\n",
+    "count=0\n",
+    "while i<len(st):\n",
+    "    if len(st)-1!=i and st[i]==chr(ord(st[i+1])-1) :\n",
+    "        if st[i] not in seq:\n",
+    "            seq+=st[i]\n",
+    "        else:\n",
+    "            if len(seq)>=3:\n",
+    "                print(seq)\n",
+    "                count+=1\n",
+    "            seq=''\n",
+    "    elif st[i-1]==chr(ord(st[i])-1):\n",
+    "        seq+=st[i]\n",
+    "        if len(seq)>=3:\n",
+    "            print(seq)\n",
+    "            count+=1\n",
+    "        seq=''\n",
+    "    i+=1\n",
+    "if len(seq)>=3:\n",
+    "    print(seq)\n",
+    "    count+=1\n",
+    "print(count)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "st=\"abcdesuad ijkladskjbf efgh;kjdsn pqrstka\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['maths', 'science', 'english', 'social', 'hindi']\n",
+      "67 99\n"
+     ]
+    }
+   ],
+   "source": [
+    "d={'maths':96,'science':78,'english':99,'social':95,'hindi':67}\n",
+    "l=list(d)\n",
+    "print(l)\n",
+    "min=100\n",
+    "max=0\n",
+    "i=0\n",
+    "while i<len(l):\n",
+    "    if max<d[l[i]]:\n",
+    "        max=d[l[i]]\n",
+    "    if min>d[l[i]]:\n",
+    "        min=d[l[i]]\n",
+    "    i+=1\n",
+    "print(min,max)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['maths', 'science', 'english', 'social', 'hindi']\n",
+      "hindi 67\n",
+      "english 99\n"
+     ]
+    }
+   ],
+   "source": [
+    "d={'maths':96,'science':78,'english':99,'social':95,'hindi':67}\n",
+    "l=list(d)\n",
+    "print(l)\n",
+    "min=100\n",
+    "min_k=''\n",
+    "max=0\n",
+    "max_k=''\n",
+    "i=0\n",
+    "while i<len(l):\n",
+    "    if max<d[l[i]]:\n",
+    "        max=d[l[i]]\n",
+    "        max_k=l[i]\n",
+    "    if min>d[l[i]]:\n",
+    "        min=d[l[i]]\n",
+    "        min_k=l[i]\n",
+    "    i+=1\n",
+    "print(min_k,min)\n",
+    "print(max_k,max)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pYTHON@123\n"
+     ]
+    }
+   ],
+   "source": [
+    "st='Python@123'\n",
+    "#o/p: pYTHON@123\n",
+    "res=''\n",
+    "if 'A'<=st[0]<='Z':\n",
+    "    res+=chr((ord(st[0]))+32)\n",
+    "else:\n",
+    "    res+=st[0]\n",
+    "i=1\n",
+    "while i<len(st):\n",
+    "    if 'a'<=st[i]<='z':\n",
+    "        res+=chr(ord(st[i])-32)\n",
+    "    else:\n",
+    "        res+=st[i]\n",
+    "    i+=1\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "6\n",
+      "[4, 5, 6]\n",
+      "15\n",
+      "[7, 8, 9]\n",
+      "24\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[[1,2,3],[4,5,6],[7,8,9]]\n",
+    "# pro=1\n",
+    "x=0\n",
+    "while x<len(l):\n",
+    "    sum1=0\n",
+    "    y=0\n",
+    "    while y<len(l[x]):\n",
+    "        sum1+=l[x][y]\n",
+    "        y+=1\n",
+    "    print(l[x])\n",
+    "    print(sum1)\n",
+    "    # print(l[x])\n",
+    "    x+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "28\n",
+      "80\n",
+      "162\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[[1,2,3],[4,5,6],[7,8,9]]\n",
+    "x=0\n",
+    "while x<len(l[0]):\n",
+    "    prod=1\n",
+    "    y=0\n",
+    "    while y<len(l):\n",
+    "        prod*=(l[y][x])\n",
+    "        y+=1\n",
+    "    print(prod)\n",
+    "    x+=1"
    ]
   }
  ],
